convert ClubTVFragment to kotlin

--- a/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
@@ -30,7 +30,7 @@
 
     <!-- Items -->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_alignTop="@+id/video_player_dummy_container"
         android:layout_alignBottom="@+id/video_player_dummy_container"
