--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -33,7 +33,7 @@
 
     <!-- Items -->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
