--- a/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryMediumLight"
-    tools:context=".ui.fragment.stream.ClubRadioFragment">
+    tools:context=".ui.fragment.stream.RadioFragment">
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progressBar"
