--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -36,6 +36,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:spanCount="2"/>
 
-        />
 </RelativeLayout>
