--- a/SportsSideKick/app/src/main/res/layout-large/fragment_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_tv.xml
@@ -11,29 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_105">
-        <View
+
+        <fragment
             android:id="@+id/youtube_layout"
+            android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
             android:layout_marginBottom="@dimen/margin_16"
             android:visibility="invisible"
             app:layout_aspectRatio="178%"
-            app:layout_widthPercent="100%"/>
+            app:layout_widthPercent="100%" />
+
     </android.support.percent.PercentRelativeLayout>
 
-   <Button
-       android:id="@+id/backButton"
-       android:layout_width="@dimen/width_40"
-       android:layout_marginTop="@dimen/margin_8"
-       android:layout_alignParentTop="true"
-       android:layout_height="@dimen/height_40"
-       android:layout_alignParentStart="true"
-       android:background="@drawable/video_back_button"/>
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="@dimen/width_40"
+        android:layout_height="@dimen/height_40"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/margin_8"
+        android:background="@drawable/video_back_button" />
 
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignBottom="@+id/backButton"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_8"
         android:gravity="center"
