--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
@@ -61,7 +61,7 @@
         android:background="@color/colorPrimary">
 
         <ImageView
-            android:id="@+id/play_button"
+            android:id="@+id/playButton"
             android:layout_width="@dimen/standard_button_width_half"
             android:layout_height="@dimen/standard_button_width_half"
             android:layout_alignParentStart="true"
@@ -74,7 +74,7 @@
             android:layout_width="@dimen/margin_10"
             android:layout_height="@dimen/margin_10"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/play_button"
+            android:layout_toEndOf="@+id/playButton"
             android:src="?radioLiveIcon" />
 
         <TextView
@@ -95,7 +95,7 @@
             android:layout_centerInParent="true" />
 
         <ImageView
-            android:id="@+id/mute_button"
+            android:id="@+id/muteButton"
             android:layout_width="@dimen/standard_button_width_half"
             android:layout_height="@dimen/standard_button_width_half"
             android:layout_margin="@dimen/margin_15"
@@ -112,7 +112,7 @@
             android:layout_height="@dimen/margin_14"
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/margin_20"
-            android:layout_toEndOf="@+id/mute_button"
+            android:layout_toEndOf="@+id/muteButton"
             android:progress="50"
             android:progressDrawable="?seekBarAudioShape"
             android:thumb="@null"
@@ -120,7 +120,7 @@
     </RelativeLayout>
 
     <SeekBar
-        android:id="@+id/seek_bar"
+        android:id="@+id/seekBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_14"
