--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -7,7 +7,7 @@
     android:background="?playerBackground">
 
     <android.support.percent.PercentRelativeLayout
-        android:id="@+id/youtube_layout_container"
+        android:id="@id/youtube_layout_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -21,13 +21,13 @@
             app:layout_widthPercent="100%" />
 
         <SeekBar
-            android:id="@+id/seek_bar"
+            android:id="@+id/seekBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_16"
-            android:layout_alignEnd="@+id/youtube_layout"
-            android:layout_alignStart="@+id/youtube_layout"
-            android:layout_below="@+id/youtube_layout"
+            android:layout_alignEnd="@id/youtube_layout"
+            android:layout_alignStart="@id/youtube_layout"
+            android:layout_below="@id/youtube_layout"
             android:thumb="@drawable/radiothumb"
             android:layout_marginEnd="@dimen/margin_negative_18"
             android:layout_marginStart="@dimen/margin_negative_16"
@@ -41,11 +41,10 @@
         android:id="@+id/controls_container"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/time_info"
         android:layout_alignParentEnd="true">
 
         <ImageView
-            android:id="@+id/play_button"
+            android:id="@+id/playButton"
             android:layout_width="@dimen/width_40"
             android:layout_height="@dimen/height_40"
             android:layout_centerHorizontal="true"
@@ -60,10 +59,10 @@
             android:layout_centerHorizontal="true" />
 
         <ImageView
-            android:id="@+id/mute_button"
+            android:id="@+id/muteButton"
             android:layout_width="@dimen/width_40"
             android:layout_height="@dimen/height_40"
-            android:layout_below="@+id/play_button"
+            android:layout_below="@+id/playButton"
             android:layout_toStartOf="@+id/center"
             android:button="@null"
             android:gravity="center"
@@ -72,10 +71,10 @@
             android:thumb="@null" />
 
         <ImageView
-            android:id="@+id/fullscreen_button"
+            android:id="@+id/fullscreenButton"
             android:layout_width="@dimen/width_40"
             android:layout_height="@dimen/height_40"
-            android:layout_below="@+id/play_button"
+            android:layout_below="@+id/playButton"
             android:layout_toEndOf="@+id/center"
             android:padding="@dimen/padding_10"
             android:src="@drawable/full_screen_icon" />
@@ -85,7 +84,7 @@
         android:id="@+id/time_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/youtube_layout_container"
+        android:layout_alignBottom="@id/youtube_layout_container"
         android:layout_alignParentEnd="true"
         android:layout_alignStart="@+id/controls_container"
         android:background="?playerBackground"
