--- a/SportsSideKick/app/src/main/res/layout/tv_channel_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/tv_channel_item.xml
@@ -12,7 +12,7 @@
         app:layout_widthPercent="100%" />
 
     <ImageView
-        android:id="@+id/play_button"
+        android:id="@+id/playButton"
         android:layout_width="@dimen/width_48"
         android:layout_alignBottom="@+id/image"
         android:layout_alignTop="@+id/image"
