--- a/SportsSideKick/app/src/main/res/layout/fragment_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_detail.xml
@@ -60,8 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:overScrollMode="always"
         android:layout_below="@+id/top_buttons_container"
+        android:overScrollMode="always"
         app:srl_direction="bottom">
 
         <android.support.v4.widget.NestedScrollView
@@ -115,18 +115,18 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:baselineAligned="false">
+                        android:baselineAligned="false"
+                        android:orientation="horizontal">
 
                         <LinearLayout
                             android:id="@+id/likes_container"
                             android:layout_width="match_parent"
                             android:layout_height="42dp"
+                            android:layout_marginEnd="@dimen/padding_8"
+                            android:layout_weight="1"
                             android:clickable="true"
                             android:focusable="true"
                             android:foreground="?selectableItemBackgroundBorderless"
-                            android:layout_marginEnd="@dimen/padding_8"
-                            android:layout_weight="1"
                             android:gravity="center">
 
                             <android.support.v7.widget.AppCompatImageView
@@ -158,12 +158,12 @@
                         <LinearLayout
                             android:id="@+id/share_container"
                             android:layout_width="match_parent"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?selectableItemBackgroundBorderless"
                             android:layout_height="42dp"
                             android:layout_marginEnd="@dimen/padding_8"
                             android:layout_weight="1"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:foreground="?selectableItemBackgroundBorderless"
                             android:gravity="center">
 
                             <android.support.v7.widget.AppCompatImageView
@@ -209,12 +209,12 @@
                         <LinearLayout
                             android:id="@+id/pin_container"
                             android:layout_width="match_parent"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?selectableItemBackgroundBorderless"
                             android:layout_height="42dp"
                             android:layout_marginEnd="@dimen/padding_8"
                             android:layout_weight="1"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:foreground="?selectableItemBackgroundBorderless"
                             android:gravity="center">
 
                             <android.support.v7.widget.AppCompatImageView
@@ -249,14 +249,14 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/social_buttons_container"
                     android:layout_marginBottom="4dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
+                    android:layout_marginTop="12dp"
                     android:ellipsize="end"
                     android:lineSpacingMultiplier="0.7"
-                    tools:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam."
                     android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    tools:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam." />
 
                 <TextView
                     android:id="@+id/content_text"
@@ -270,7 +270,7 @@
                     android:animateLayoutChanges="true"
                     android:lineSpacingMultiplier="0.9"
                     android:maxLines="3"
-                    android:text="@string/lorem_ipsum"
+                    tools:text="@string/lorem_ipsum"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -280,58 +280,53 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/content_text"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/margin_10"
                     android:animateLayoutChanges="true"
                     android:animationCache="true">
 
                     <TextView
                         android:id="@+id/translate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/Button.PlainText"
+                        android:layout_marginStart="8dp"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:padding="@dimen/padding_5"
-                        android:paddingStart="@dimen/padding_16"
                         android:text="@string/translate"
                         android:textColor="@color/colorPrimaryVeryLight"
                         android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/read_more_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/Button.PlainText"
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@+id/translate"
-                        android:padding="@dimen/padding_5"
-                        android:paddingStart="@dimen/padding_10"
+                        android:layout_marginStart="8dp"
                         android:text="@string/read_more"
                         android:textColor="@color/colorPrimaryVeryLight"
                         android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <Button
+                        android:id="@+id/deleteButton"
+                        style="@style/Button.PlainText"
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@+id/read_more_text"
-                        android:paddingStart="@dimen/padding_16"
                         android:text="@string/delete"
                         android:textColor="@color/colorPrimaryVeryLight"
                         android:textSize="12sp"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        tools:visibility="visible"/>
+
                 </RelativeLayout>
 
                 <View
                     android:id="@+id/bottom_horizontal_split_line"
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:visibility="invisible"
-                    android:layout_marginBottom="-16dp"
                     android:layout_below="@+id/read_more_holder"
+                    android:layout_marginBottom="-16dp"
                     android:layout_marginEnd="@dimen/padding_10"
                     android:layout_marginStart="@dimen/padding_10"
                     android:alpha="0.5"
-                    android:background="@color/colorPrimaryVeryLight" />
+                    android:background="@color/colorPrimaryVeryLight"
+                    android:visibility="invisible" />
 
                 <LinearLayout
                     android:id="@+id/tutorial_container"
@@ -430,8 +425,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f7ffffff"
-        android:orientation="vertical"
         android:elevation="6dp"
+        android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible">
 
@@ -459,28 +454,28 @@
                 android:id="@+id/sharedMessageAvatar"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginRight="4dp"
                 android:layout_marginBottom="@dimen/margin_10"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="14dp"
                 tools:src="?profileImageIcon" />
 
             <EditText
                 android:id="@+id/sharedMessageField"
+                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:paddingTop="14dp"
-                android:inputType="textCapSentences"
-                android:gravity="top"
-                android:paddingBottom="15dp"
-                android:paddingRight="8dp"
-                android:singleLine="true"
-                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_weight="1"
                 android:background="@null"
-                tools:text="Check out this awesome article! I guarantee you are going to like it"
+                android:gravity="top"
+                android:inputType="textCapSentences"
+                android:paddingBottom="15dp"
+                android:paddingRight="8dp"
+                android:paddingTop="14dp"
+                android:singleLine="true"
                 android:textColor="#cd008643"
                 android:textSize="16sp"
+                tools:text="Check out this awesome article! I guarantee you are going to like it"
                 tools:textStyle="bold" />
 
             <View
@@ -502,9 +497,9 @@
             <LinearLayout
                 android:id="@+id/sharedMessageDeleteEditContainer"
                 android:layout_width="60dp"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:visibility="gone"
                 tools:visibility="gone">
@@ -514,24 +509,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:background="@color/colorPrimaryVeryLight"
-                    android:text="@string/edit"
                     android:foreground="?selectableItemBackground"
+                    android:text="@string/edit"
                     android:textAllCaps="false"
                     android:textColor="@color/white" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#4300a352"/>
+                    android:background="#4300a352" />
 
                 <Button
                     android:id="@+id/sharedMessageDeleteButton"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:background="@color/colorPrimaryVeryLight"
+                    android:foreground="?selectableItemBackground"
                     android:text="@string/delete"
                     android:textAllCaps="false"
-                    android:foreground="?selectableItemBackground"
                     android:textColor="@color/white" />
 
             </LinearLayout>
@@ -552,10 +547,10 @@
     <FrameLayout
         android:id="@+id/commentInputOverlay"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        tools:visibility="gone"
         android:layout_height="match_parent"
-        android:background="#94000000">
+        android:background="#94000000"
+        android:visibility="gone"
+        tools:visibility="gone">
 
         <ImageButton
             android:id="@+id/closeButtonSharedComment"
