refactor login fragment

--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="24dp"
     android:background="@color/colorPrimaryMediumLight">
@@ -11,7 +12,7 @@
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/top_buttons_container"
+        android:layout_below="@id/top_buttons_container"
         android:background="@color/colorPrimary" />
 
     <ImageView
@@ -28,50 +29,22 @@
         android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_buttons_container_login"
-        android:layout_below="@+id/top_buttons_container">
+        android:layout_above="@id/submitButton"
+        android:layout_below="@id/top_buttons_container">
+
+        <ImageButton
+            android:id="@+id/cancelRestoreButton"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:scaleType="fitCenter"
+            android:padding="16dp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:src="@drawable/ic_arrow_back" />
 
         <RelativeLayout
-            android:id="@+id/forgot_password_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-
-            android:clickable="true"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/forgot_password_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/margin_10"
-                android:src="@drawable/ic_arrow_back" />
-
-            <RelativeLayout
-                android:layout_width="@dimen/login_conteiner_width"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="@dimen/margin_40"
-                android:clickable="true"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/login_forgot_pass_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/standard_button_height"
-                    android:background="@drawable/text_login_selector"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:nextFocusDown="@+id/passwordField"
-                    android:padding="@dimen/padding_8"
-                    android:textAlignment="center"
-                    android:textColor="?white"
-                    android:textColorHint="?white" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/content_container"
+            android:id="@+id/fieldsContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"
@@ -94,7 +67,7 @@
                     android:src="@drawable/club_logo" />
 
                 <TextView
-                    android:id="@+id/title_text"
+                    android:id="@+id/titleText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -115,7 +88,7 @@
                     android:textSize="@dimen/font_size_16" />
 
                 <com.facebook.login.widget.LoginButton
-                    android:id="@+id/sign_up_facebook"
+                    android:id="@+id/facebookButton"
                     style="@style/facebook_login_button_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -198,22 +171,24 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container_login"
+    <FrameLayout
+        android:id="@+id/submitButton"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@+id/forgot_button"
+        android:layout_above="@id/forgot_button"
         android:layout_marginEnd="@dimen/margin_30"
         android:layout_marginStart="@dimen/margin_30"
         android:background="@drawable/button_login_login"
+        android:foreground="?selectableItemBackground"
         android:clickable="true"
+        android:focusable="true"
         android:visibility="visible">
 
         <TextView
-            android:id="@+id/login_text"
+            android:id="@+id/submitButtonLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:text="@string/sign_in"
             android:textColor="@android:color/black"
             android:textSize="@dimen/font_size_18" />
@@ -222,44 +197,12 @@
             android:id="@+id/progressBar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:elevation="@dimen/elevation_2"
             android:visibility="gone"
             app:indicatorName="LineSpinFadeLoaderIndicator" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container_reset"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@+id/forgot_button"
-        android:layout_marginEnd="@dimen/margin_30"
-        android:layout_marginStart="@dimen/margin_30"
-        android:background="@drawable/button_login_login"
-        android:clickable="true"
-        android:visibility="invisible">
-
-        <TextView
-            android:id="@+id/reset_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/password_reset"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/font_size_18"
-            android:visibility="visible" />
-
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/reset_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            android:visibility="gone"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
-
-    </RelativeLayout>
+    </FrameLayout>
 
     <View
         android:layout_height="24dp"
