--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -341,7 +341,7 @@
                     android:background="@drawable/button_login_transparent">
 
                     <Button
-                        android:id="@+id/join_now_button"
+                        android:id="@+id/registerButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
@@ -361,7 +361,7 @@
                     android:background="@drawable/button_login_transparent">
 
                     <Button
-                        android:id="@+id/login_button"
+                        android:id="@+id/loginButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
