--- a/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
@@ -106,7 +106,7 @@
                 android:background="@drawable/button_login_transparent">
 
                 <Button
-                    android:id="@+id/join_now_button"
+                    android:id="@+id/registerButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/transparent"
@@ -126,7 +126,7 @@
                 android:background="@drawable/button_login_transparent">
 
                 <Button
-                    android:id="@+id/login_button"
+                    android:id="@+id/loginButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/transparent"
