--- a/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
@@ -85,7 +85,7 @@
                         android:layout_weight="0.095" />
 
                     <Button
-                        android:id="@+id/join_now_button"
+                        android:id="@+id/registerButton"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/standard_button_height"
                         android:layout_weight="0.397"
@@ -102,7 +102,7 @@
                         android:layout_weight="0.023" />
 
                     <Button
-                        android:id="@+id/login_button"
+                        android:id="@+id/loginButton"
                         android:layout_width="0dp"
 
                         android:layout_height="@dimen/standard_button_height"
