--- a/SportsSideKick/app/src/main/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/comment_item.xml
@@ -42,7 +42,7 @@
             android:textSize="@dimen/font_size_10" />
 
         <TextView
-            android:id="@+id/translate"
+            android:id="@+id/translateButton"
             android:layout_below="@id/message_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/message_information"
             android:padding="@dimen/margin_5"
-            android:layout_toEndOf="@+id/translate"
+            android:layout_toEndOf="@+id/translateButton"
             android:paddingEnd="@dimen/padding_10"
             android:text="@string/delete"
             android:visibility="gone"
@@ -69,12 +69,12 @@
             />
 
         <TextView
-            android:id="@+id/edit"
+            android:id="@+id/editButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/message_information"
             android:paddingEnd="@dimen/padding_10"
-            android:layout_toEndOf="@+id/delete"
+            android:layout_toEndOf="@+id/deleteButton"
             android:text="@string/edit"
             android:textColor="@color/colorPrimaryVeryLight"
             android:visibility="gone"
