--- a/SportsSideKick/app/src/main/res/layout/fragment_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_detail.xml
@@ -284,7 +284,7 @@
                     android:animationCache="true">
 
                     <TextView
-                        android:id="@+id/translate"
+                        android:id="@+id/translateButton"
                         style="@style/Button.PlainText"
                         android:layout_marginStart="8dp"
                         android:layout_alignParentStart="true"
@@ -297,7 +297,7 @@
                         android:id="@+id/read_more_text"
                         style="@style/Button.PlainText"
                         android:layout_centerVertical="true"
-                        android:layout_toEndOf="@+id/translate"
+                        android:layout_toEndOf="@+id/translateButton"
                         android:layout_marginStart="8dp"
                         android:text="@string/read_more"
                         android:textColor="@color/colorPrimaryVeryLight"
