--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.fragment.content.tv.TvFragment">
+    tools:context=".ui.fragment.content.tv.TvPlaylistsFragment">
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
