--- a/SportsSideKick/app/src/main/res/layout/fragment_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_tv.xml
@@ -12,10 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <fragment
-            android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
+        <!-- TODO: Replace with Youtube player fragment-->
+        <View
+            android:name="base.app.ui.fragment.content.tv.TvPlayerFragment"
             android:id="@+id/youtube_layout"
-            android:visibility="invisible"
             app:layout_aspectRatio="178%"
             app:layout_widthPercent="100%" />
 
