--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -27,7 +27,7 @@
             android:textSize="@dimen/font_size_18" />
 
         <ImageButton
-            android:id="@+id/close_dialog_button"
+            android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
@@ -38,7 +38,7 @@
             android:tint="@color/colorPrimaryVeryLight" />
 
         <TextView
-            android:id="@+id/post"
+            android:id="@+id/postButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
@@ -52,7 +52,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/content_image"
+        android:id="@+id/contentImage"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_150"
         android:adjustViewBounds="true"
@@ -63,21 +63,21 @@
         android:layout_below="@+id/top_buttons_container"/>
 
     <TextView
-        android:id="@+id/remove"
+        android:id="@+id/removeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/content_image"
+        android:layout_alignBottom="@+id/contentImage"
         android:padding="@dimen/padding_10"
         android:visibility="gone"
         android:text="@string/delete" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/author_user_image"
+        android:id="@+id/authorImage"
         android:layout_width="@dimen/width_26"
         android:layout_height="@dimen/height_26"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/content_image"
+        android:layout_below="@id/contentImage"
         android:layout_marginTop="@dimen/margin_10"
         android:layout_marginStart="@dimen/margin_15"
         android:src="?profileImageIcon"
@@ -88,11 +88,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:foregroundGravity="center"
-        android:layout_alignTop="@+id/content_image"
-        android:layout_alignBottom="@+id/content_image">
+        android:layout_alignTop="@+id/contentImage"
+        android:layout_alignBottom="@+id/contentImage">
 
         <ImageView
-            android:id="@+id/camera"
+            android:id="@+id/cameraButton"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
@@ -102,7 +102,7 @@
             app:layout_constraintEnd_toStartOf="@+id/progressBar" />
 
         <ImageView
-            android:id="@+id/gallery"
+            android:id="@+id/galleryButton"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
@@ -129,26 +129,26 @@
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/author_name"
+        android:id="@+id/authorName"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@id/content_image"
-        android:layout_alignTop="@+id/author_user_image"
-        android:layout_alignBottom="@+id/author_user_image"
+        android:layout_below="@id/contentImage"
+        android:layout_alignTop="@+id/authorImage"
+        android:layout_alignBottom="@+id/authorImage"
         android:layout_marginStart="@dimen/margin_5"
         android:gravity="center_vertical"
-        android:layout_toEndOf="@+id/author_user_image"
+        android:layout_toEndOf="@+id/authorImage"
         android:ellipsize="end"
         tools:text="Chris Reeves"
         android:textColor="@color/colorGray"
         android:textSize="@dimen/font_size_12" />
 
     <EditText
-        android:id="@+id/caption"
+        android:id="@+id/titleField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapSentences"
-        android:layout_below="@id/author_user_image"
+        android:layout_below="@id/authorImage"
         android:layout_marginEnd="@dimen/margin_5"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_marginTop="@dimen/margin_5"
@@ -160,10 +160,10 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/content"
+        android:id="@+id/bodyTextField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/caption"
+        android:layout_below="@id/titleField"
         android:inputType="textCapSentences"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_15"
