--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -90,7 +90,7 @@
                         android:layout_alignParentTop="true">
 
                         <ImageView
-                            android:id="@+id/content_image"
+                            android:id="@+id/contentImage"
                             android:layout_width="match_parent"
                             android:layout_height="250dp"
                             android:adjustViewBounds="true"
