--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container"
     xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true">
 
@@ -57,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/margin_20"
-                android:background="@null"
+                android:background="?selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:src="?popupCancelButtonIcon"
                 android:visibility="visible" />
@@ -74,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/margin_20"
-                android:background="@null"
+                android:background="?selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:src="?popupConfirmationButtonIcon" />
         </LinearLayout>
